<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CED6FF"
    tools:context=".activity.Authentication_activity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="45dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciesesion"
            android:textSize="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/et_mail_ingresar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:backgroundTint="@null"
            android:background="@drawable/rectangulo_campo"
            android:paddingHorizontal="5dp"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textPersonName"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            app:backgroundTint="@null"
            android:background="@drawable/rectangulo_campo"
            android:paddingHorizontal="5dp"
            android:id="@+id/et_pass_ingresar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnRegistrarse"
                app:backgroundTint="@null"
                android:background="@drawable/presionarboton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickRegistrarse"
                android:text="@string/registrar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnIngresar"
                app:backgroundTint="@null"
                android:background="@drawable/presionarboton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickIngresar"
                android:text="@string/ingresar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/googleButton2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/presionarboton1"
            android:backgroundTint="@color/cardview_light_background"
            android:drawableLeft="@drawable/common_google_signin_btn_icon_light_normal"
            android:drawablePadding="20dp"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="onClickGoogle"
            android:shadowColor="@color/black"
            android:text="Google"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/presionarboton1"
            android:backgroundTint="#056FC3"
            android:drawableLeft="@drawable/com_facebook_button_login_logo"
            android:drawablePadding="20dp"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:onClick="onClickFacebook"
            android:shadowColor="@color/black"
            android:text="Facebook"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>