<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CED6FF"
    tools:context=".activity.Curso_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="CURSO"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Facultad"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFacultad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="FACULTAD"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Profesores"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvProfesores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="PROFESORES"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Puntaje del curso"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPuntaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="PUNTAJE"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Votar"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/estrellasPuntaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/layoutBotonesComentsArchivos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                app:backgroundTint="@null"
                android:background="@drawable/presionarboton1"
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:onClick="onClickDocumentos"
                android:text="@string/archivos" />

            <Button
                app:backgroundTint="@null"
                android:background="@drawable/presionarboton1"
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:onClick="onClickComentarios"
                android:text="@string/comentarios" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSuscribirDesuscribir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/presionarboton1"
            android:onClick="onClickSuscribirDesuscribir"
            android:text="@string/suscribir"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>